# bevy_eidolon

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
assets/: icon.png.kra  icon.png~
assets/shaders/: custom_material.wgsl  lit_material.wgsl
examples/: custom_material.rs  lines.rs  lit_material.rs  material.rs  stress_test.rs  trimesh.rs
examples/utils/: camera_controller.rs  example.rs
src/: components.rs  cull.wgsl  draw.rs  lib.rs  material.rs  node.rs  pipeline.rs  plugin.rs  prepare.rs  render.wgsl  resources.rs  systems.rs
src/cull/: bindings.wgsl  compute.wgsl  mod.rs  node.rs  pipeline.rs  plugin.rs  prepare.rs  queue.rs  types.wgsl
src/render/: bindings.wgsl  draw.rs  io_types.wgsl  mesh.wgsl  mod.rs  pipeline.rs  plugin.rs  prepare.rs  prepared_material.rs  prepass.wgsl  queue.rs  shading.wgsl  types.wgsl  utils.wgsl
