[package]
name = "bevy_eidolon"
version = "0.1.0-rc.1"
edition = "2024"
description = "Generic instanced material for the bevy game engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/bevy_feronia"

exclude = ["assets/", ".github/"]

[dependencies]
bevy_render = { version = "^0.17", default-features = false }
bevy_derive = { version = "^0.17", default-features = false }
bevy_ecs = { version = "^0.17", default-features = false }
bevy_math = { version = "^0.17", default-features = false }
bevy_reflect = { version = "^0.17", default-features = false }
bevy_utils = { version = "^0.17", default-features = false }
bevy_color= { version = "^0.17", default-features = false }
bevy_asset= { version = "^0.17", default-features = false }
bevy_camera= { version = "^0.17", default-features = false }
bevy_pbr= { version = "^0.17", default-features = false }
bevy_core_pipeline= { version = "^0.17", default-features = false }
bevy_app= { version = "^0.17", default-features = false }
bevy_mesh= { version = "^0.17", default-features = false }
bevy_shader= { version = "^0.17", default-features = false }

bytemuck = "^1.24"
bitflags = "^2.10"

tracing = { version = "^0.1", default-features = false, optional = true }

[dev-dependencies]
bevy-inspector-egui = "0.35.0"
bevy = { version = "0.17", features = [
    "dynamic_linking",
    "file_watcher",
    "embedded_watcher",
    "asset_processor",
    "basis-universal",
]}

iyes_perf_ui = "0.5.0"
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[features]
default = ["trace"]

# Enables tracing and adds the dependency.
trace = ["dep:tracing"]

[patch.crates-io]
iyes_perf_ui = { git = "https://github.com/mgi388/iyes_perf_ui", branch = "bevy-0.17" }
